[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-SPALake"
dynamic = ["version", "dependencies"]

authors = [
    {name = "Alberto Garcia Mena", email = "alberto.garcia@cnb.csic.es"},
]

description = "PLugin to collect data from a SPA workflow and push it to the database SPALake"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["scipion electron-microscopy cryo-em structural-biology image-processing scipion-3.0 SPALake"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/I2PC/scipion-em-SPALake"
Issues = "https://github.com/I2PC/scipion-em-SPALake/issues"

[tool.setuptools.dynamic]
version = {attr = "SPALake.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.entry-points."pyworkflow.plugin"]
SPALake = "SPALake"

[tool.setuptools.package-data]
SPALake = ["protocols.conf"]